# minimal

./: CMakeLists.txt  LICENSE  README
src/: cli.c  mask.h  request.c  request.h  wireguard.c  wireguard.h
